--- a/academy/views/course_views.xml
+++ b/academy/views/course_views.xml
@@ -56,6 +56,21 @@
             </field>
         </record>
 
+        <record model="ir.ui.view" id="course_view_pivot">
+            <field name="name">academy.course.pivog</field>
+            <field name="model">academy.course</field>
+            <field name="arch" type="xml">
+                <pivot>
+                    <field name="level" type="row"/>
+                    <field name="name" type="row"/>
+                    <field name="base_price" type="measure"/>
+                    <field name="additional_fee" type="measure"/>
+                    <field name="total_price" type="measure"/>
+                </pivot>
+            </field>
+        </record>
+
+
         <menuitem name="Odoo Academy" id="menu_academy" sequence="1" />
         <menuitem name="Odoo Academy" id="menu_academy_sub" parent="menu_academy" sequence="2" />
         <menuitem name="Courses" id="menu_academy_course" parent="menu_academy_sub" sequence="3" action="course_list_action" />
